style(Footer): Wrong positioning fixed.

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,13 +1,10 @@
 .footer {
+  position: absolute;
+  width: 100%;
   border-radius: $radius $radius 0 0;
   background-color: $color-black;
   padding-top: 2.7rem;
   padding-bottom: 2.7rem;
-
-  @media (min-width: 1200px) {
-    left: 10rem;
-    right: 10rem;
-  }
 }
 
 .footer__content {
